@@ -144,7 +144,7 @@ public class AuthController implements AuthApi {
             var loginResponseDTO = new LoginResponseDTO();
             loginResponseDTO.setNome(usuario.getNome());
             loginResponseDTO.setAuthorization(authorization);
-            loginResponseDTO.setPerfil(usuario.getPerfis().get(0).getNome());
+            loginResponseDTO.setPerfil(usuario.getPerfis().getFirst().getNome());
             return ResponseEntity.ok(loginResponseDTO);
         } else {
             return ResponseEntity.badRequest().build();
