@@ -1,6 +1,6 @@
 package com.dasad.empresa.repository.query;
 
-import com.dasad.empresa.jooq.model.enums.StatusServico;
+import com.dasad.empresa.jooq.model.enums.StatusCategoria;
 import com.dasad.empresa.jooq.model.tables.Subcategoria;
 import com.dasad.empresa.jooq.model.tables.Usuario;
 import com.dasad.empresa.model.SubCategoriaModel;
@@ -19,7 +19,7 @@ import java.util.concurrent.CompletableFuture;
 import java.util.stream.Collectors;
 
 public class SubCategoriaQueryBuilder {
-    private @NotNull SelectConditionStep<Record12<Integer, Integer, String, String, StatusServico, Integer, Object, BigDecimal, Object, String[], LocalDateTime, LocalDateTime>> query;
+    private @NotNull SelectConditionStep<Record12<Integer, Integer, String, String, StatusCategoria, Integer, Object, BigDecimal, Object, String[], LocalDateTime, LocalDateTime>> query;
     private static final Integer DEFAULT_LIMIT = 10;
     private final DSLContext dslContext;
 
@@ -66,7 +66,7 @@ public class SubCategoriaQueryBuilder {
 
     public SubCategoriaQueryBuilder withStatus(String status) {
         if (status != null && !status.isEmpty()) {
-            this.query = this.query.and(Subcategoria.SUBCATEGORIA.STATUS.eq(StatusServico.valueOf(status)));
+            this.query = this.query.and(Subcategoria.SUBCATEGORIA.STATUS.eq(StatusCategoria.valueOf(status)));
         }
         return this;
     }
@@ -90,30 +90,28 @@ public class SubCategoriaQueryBuilder {
     }
 
     public CompletableFuture<List<SubCategoriaModel>> build() {
-        return CompletableFuture.supplyAsync(() -> {
-            return this.query.fetch().stream().collect(Collectors.groupingBy(
-                    record -> record.get(Usuario.USUARIO.ID),
-                    Collectors.mapping(record -> record, Collectors.toList())
-            )).values().stream().map(records -> {
-                Record12<Integer, Integer, String, String, StatusServico, Integer, Object, BigDecimal, Object, String[], LocalDateTime, LocalDateTime> record = records.getFirst();
-                SubCategoriaModel subCategoria = new SubCategoriaModel();
-                subCategoria.setId(record.get(Subcategoria.SUBCATEGORIA.ID));
-                subCategoria.setCategoriaId(record.get(Subcategoria.SUBCATEGORIA.CATEGORIA_ID));
-                subCategoria.setNome(record.get(Subcategoria.SUBCATEGORIA.NOME));
-                subCategoria.setDescricao(record.get(Subcategoria.SUBCATEGORIA.DESCRICAO));
-                subCategoria.setStatus(record.get(Subcategoria.SUBCATEGORIA.STATUS).toString());
-                subCategoria.setTempoMedioMinutos(record.get(Subcategoria.SUBCATEGORIA.TEMPO_MEDIO_MINUTOS));
-                subCategoria.setNivelComplexidade(record.get(Subcategoria.SUBCATEGORIA.NIVEL_COMPLEXIDADE).toString());
-                subCategoria.setPrecoBase(record.get(Subcategoria.SUBCATEGORIA.PRECO_BASE));
-                subCategoria.setUnidadeMedida(record.get(Subcategoria.SUBCATEGORIA.UNIDADE_MEDIDA).toString());
-                subCategoria.setMateriaisTipicos(String.join(",", record.get(Subcategoria.SUBCATEGORIA.MATERIAIS_TIPICOS)));
-                var dataCriacao = record.get(Subcategoria.SUBCATEGORIA.DATA_CRIACAO);
-                subCategoria.setDataCriacao(dataCriacao != null ? OffsetDateTime.of(dataCriacao, ZoneOffset.UTC) : null);
-                var dataAtualizacao = record.get(Subcategoria.SUBCATEGORIA.DATA_ATUALIZACAO);
-                subCategoria.setDataAtualizacao(dataAtualizacao != null ? OffsetDateTime.of(dataAtualizacao, ZoneOffset.UTC) : null);
-                return subCategoria;
-            }).toList();
-        });
+        return CompletableFuture.supplyAsync(this.query.fetch().stream().collect(Collectors.groupingBy(
+                record -> record.get(Usuario.USUARIO.ID),
+                Collectors.mapping(record -> record, Collectors.toList())
+        )).values().stream().map(records -> {
+            Record12<Integer, Integer, String, String, StatusCategoria, Integer, Object, BigDecimal, Object, String[], LocalDateTime, LocalDateTime> record = records.getFirst();
+            SubCategoriaModel subCategoria = new SubCategoriaModel();
+            subCategoria.setId(record.get(Subcategoria.SUBCATEGORIA.ID));
+            subCategoria.setCategoriaId(record.get(Subcategoria.SUBCATEGORIA.CATEGORIA_ID));
+            subCategoria.setNome(record.get(Subcategoria.SUBCATEGORIA.NOME));
+            subCategoria.setDescricao(record.get(Subcategoria.SUBCATEGORIA.DESCRICAO));
+            subCategoria.setStatus(record.get(Subcategoria.SUBCATEGORIA.STATUS).toString());
+            subCategoria.setTempoMedioMinutos(record.get(Subcategoria.SUBCATEGORIA.TEMPO_MEDIO_MINUTOS));
+            subCategoria.setNivelComplexidade(record.get(Subcategoria.SUBCATEGORIA.NIVEL_COMPLEXIDADE).toString());
+            subCategoria.setPrecoBase(record.get(Subcategoria.SUBCATEGORIA.PRECO_BASE));
+            subCategoria.setUnidadeMedida(record.get(Subcategoria.SUBCATEGORIA.UNIDADE_MEDIDA).toString());
+            subCategoria.setMateriaisTipicos(String.join(",", record.get(Subcategoria.SUBCATEGORIA.MATERIAIS_TIPICOS)));
+            var dataCriacao = record.get(Subcategoria.SUBCATEGORIA.DATA_CRIACAO);
+            subCategoria.setDataCriacao(dataCriacao != null ? OffsetDateTime.of(dataCriacao, ZoneOffset.UTC) : null);
+            var dataAtualizacao = record.get(Subcategoria.SUBCATEGORIA.DATA_ATUALIZACAO);
+            subCategoria.setDataAtualizacao(dataAtualizacao != null ? OffsetDateTime.of(dataAtualizacao, ZoneOffset.UTC) : null);
+            return subCategoria;
+        })::toList);
     }
 
     public CompletableFuture<Integer> calculateTotalPages(Integer limit) {
@@ -122,11 +120,9 @@ public class SubCategoriaQueryBuilder {
     }
 
     public CompletableFuture<Integer> countTotalRecords() {
-        return CompletableFuture.supplyAsync(() -> {
-            return this.dslContext
-                    .selectCount()
-                    .from(Subcategoria.SUBCATEGORIA)
-                    .fetchOne(0, int.class);
-        });
+        return CompletableFuture.supplyAsync(() -> this.dslContext
+                .selectCount()
+                .from(Subcategoria.SUBCATEGORIA)
+                .fetchOne(0, int.class));
     }
 }
